# simulator

./: .gitignore  .gitmodules  .~lock.simulator_result.csv#  CMakeLists.txt  Makefile  Parse.cpp  Profiler.cpp  README.md  assemble.sh  invparam.txt  main.cpp  minrt.ml  simulator_result.csv  sqrparam.txt  test.ml
OreOre-V/: CMakeLists.txt  OreOre-V.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  simobj.cpp  simobj.h
OreOre-V-CMake-JIT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simobj.cpp
OreOre-V-Qmake/: main.cpp  mainwindow.cpp  mainwindow.h  simobj.cpp  simobj.h
OreOre-V-Windows/: CMakeLists.txt  mainwindow.h  simobj.h
asm/: .gitignore  Assembler.cpp  Assembler.hpp  CMakeLists.txt  Instructions.cpp  Instructions.hpp  Makefile  Parse.cpp  Parse.hpp  README.md  Reader.cpp  Reader.hpp  main.cpp
btest/: .ninja_deps  .ninja_log  Makefile  build.ninja  cmake_install.cmake  rules.ninja
btest/gui-simulator_autogen/: moc_predefs.h  mocs_compilation.cpp
btest/gui-simulator_autogen/ZJS56FUION/: moc_mainwindow.cpp  moc_simobj.cpp
btest/gui-simulator_autogen/include/: ui_mainwindow.h
btest/simple-simulator_autogen/: moc_predefs.h
build-OreOre-V-Qt_5_12_8_qt5-Debug/: Makefile  moc_mainwindow.cpp  moc_simobj.cpp  qrc_resources.cpp  ui_mainwindow.h
etc/: fcos.s  fsin.s
lib/: CMakeLists.txt  DisAssembler.cpp  DisAssembler.hpp  main.cpp  util.hpp
sim/: CMakeLists.txt  CPU.cpp  CPU.hpp  Compiler.cpp  Compiler.hpp  FPU.cpp  FPU.hpp  Instructions.hpp  Makefile  Memory.cpp  Memory.hpp  OldMakefile  Parse.hpp  Profiler.cpp  Profiler.hpp  Simulator.cpp  Simulator.hpp  fpu.cpp  fpu.hpp  fputest.cpp  heyhey.cpp  main.cpp  proftest.cpp  simplesim.cpp  util.cpp  util.hpp
sld/: Makefile  main.cpp  sld-converter
vliw/: Makefile  Packer.cpp  Translator.cpp  minrt.s  minrtvliw.s  packer  tooSimplePacker.cpp  translator
